--- a/hosko/static/admin/css/custom.css
+++ b/hosko/static/admin/css/custom.css
@@ -9,3 +9,7 @@ td a {color:#fff !important}
 .userTable select {padding:7px 10px; border-radius: 5px; margin-bottom:0px !important; margin:5px !important; border:0; background-color:rgba(0, 0, 0, 0.3)}
 .userTable textarea {width:100%; height:100px; padding:5px; border-radius: 5px; background-color:rgba(0, 0, 0, 0.3)}
 .langLabel {display:block; width:50px;}
+
+ .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active {
+    color: black !important;
+}
